--- a/JavaScript-Web/js-back-end/6-workshop-mongodb-and-mongoose/cubicle-part2/package.json
+++ b/JavaScript-Web/js-back-end/6-workshop-mongodb-and-mongoose/cubicle-part2/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "express": "^4.17.1",
         "express-handlebars": "^3.1.0",
+        "mongoose": "5.12.13",
         "uniqid": "^5.0.3"
     }
 }
